fix(icon): fix icon alignment

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -23,7 +23,7 @@ $xl-size: 10rem;
 
 // Responsive Breakpoints
 $bp-largest: 75em; // 1200px
-$bp-large: 62.5em; // 1000px
+$bp-large: 57em; // 912px
 $bp-medium: 46em; // 736px;
 $bp-small: 37.5em; // 600px;
 $bp-smallest: 30em; // 480px;
