--- a/src/styles/components/navigation/_footer.scss
+++ b/src/styles/components/navigation/_footer.scss
@@ -55,11 +55,7 @@
 
 .footer-hr {
   display: block;
-  margin-top: $l-size;
+  margin-top: $xl-size;
   border: 0;
   border-top: 1px solid rgba($color-grey-dark-2, 0.3);
-
-  @media only screen and (max-width: 51.25em) {
-    display: none;
-  }
 }
